# expand

./: README.md  pyproject.toml
src/expand/: __init__.py  _core.py
